Debug gulp styles - terminal errors

--- a/eaton.frontend/src/components/header/css/_header-primary-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-primary-nav.scss
@@ -25,7 +25,8 @@ $primary-nav-border: #EEF0F2;
   &__links {
     position: relative;
     z-index: 1;
-    i {
+
+    .icon {
       font-size: 20px;
       color: $color__primary-blue;
       position: relative;
