--- a/eaton.frontend/src/components/header/css/_header-search.scss
+++ b/eaton.frontend/src/components/header/css/_header-search.scss
@@ -30,6 +30,6 @@
   //-----------------------------------
   @include media-desktop-and-up {
     position: absolute;
-    box-shadow: 0 10px 10px 0 rgba(0,0,0,0.45);
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.45);
   }
 }
