--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
@@ -1,7 +1,3 @@
-.module-media-gallery__slide-preview { border: 1px solid indianred; }
-
-.module-media-gallery__slide-container .module-media-gallery__arrows { border: 1px solid mediumseagreen; }
-
 .module-media-gallery__header, .module-media-gallery__description { margin-bottom: 30px; }
 
 .module-media-gallery__headline { margin-bottom: 30px; }
@@ -56,5 +52,5 @@
   .module-media-gallery__slide-info { margin: 0 0 30px; }
   .module-media-gallery__thumbnail-container .module-media-gallery__arrows .icon { font-size: 12px; }
   .module-media-gallery__thumbnail-item { position: relative; margin: 0 30px; padding-bottom: 10px; }
-  .module-media-gallery__thumbnail-item.active:after { content: ''; position: absolute; height: 2px; width: 100%; background: #005EB8; bottom: 0; }
+  .module-media-gallery__thumbnail-item.active::after { content: ''; position: absolute; height: 2px; width: 100%; background: #005EB8; bottom: 0; }
   .module-media-gallery__thumbnail-aspect-ratio { margin: 0; border: 0; border-radius: 0; background: none; -webkit-appearance: none; -moz-appearance: none; appearance: none; } }
