--- a/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/module-media-gallery.scss
@@ -165,9 +165,9 @@
         width: 10px;
         border: 10px;
         border-radius: 50%;
+        font-size: 0;
         color: transparent;
         background-color: $color__secondary-gray5;
-        line-height: 0;
         padding: 5px;
       }
     }
@@ -177,10 +177,8 @@
     &__thumbnail-container {
       display: none;
     }
-
   }
-
-
+  
 
   //-----------------------------------
   // Desktop Breakpoint: >992 px
