--- a/eaton.frontend/src/components/grid-col-control/css/grid-col-control.scss
+++ b/eaton.frontend/src/components/grid-col-control/css/grid-col-control.scss
@@ -8,14 +8,14 @@
 // Base Styles
 .eaton-grid-control {
   position: relative;
-  margin: $spacing__sm 0;
+  margin: $spacing__md 0;
 
   //-----------------------------------
   // Mobile Breakpoint
   //-----------------------------------
   @include media-mobile-and-tablet {
     &__column {
-      margin-bottom: ($spacing__sm);
+      margin-bottom: ($spacing__md);
 
       &:last-child {
         margin-bottom: 0;
