--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
@@ -26,6 +26,8 @@
 
 .dark-theme .eaton-product-tabs__buttons::before, .eaton-product-tabs.dark-theme__buttons::before { background-color: #333F48; }
 
+.dark-theme .eaton-product-tabs label, .eaton-product-tabs.dark-theme label { background-color: #333F48; }
+
 .dark-theme .eaton-product-tabs label:hover, .dark-theme .eaton-product-tabs label:focus, .dark-theme .eaton-product-tabs label:active, .dark-theme .eaton-product-tabs label.tab-active, .eaton-product-tabs.dark-theme label:hover, .eaton-product-tabs.dark-theme label:focus, .eaton-product-tabs.dark-theme label:active, .eaton-product-tabs.dark-theme label.tab-active { background-color: #5B6770; }
 
 .dark-theme .eaton-product-tabs label .icon, .dark-theme .eaton-product-tabs label span, .eaton-product-tabs.dark-theme label .icon, .eaton-product-tabs.dark-theme label span { color: #FFF; }
@@ -58,7 +60,7 @@
 
 .eaton-product-tabs__tab-panel.panel-active { display: block; }
 
-.eaton-product-tabs label { cursor: pointer; width: 33.333%; text-align: center; float: left; padding: 1.3rem 0; margin: 0; }
+.eaton-product-tabs label { cursor: pointer; width: 33.333%; text-align: center; float: left; padding: 1.3rem 0; margin: 0; background-color: #F8F8F8; }
 
 .eaton-product-tabs label a { display: block; width: 100%; height: 100%; }
 
@@ -92,9 +94,11 @@
   .eaton-product-tabs .eaton-product-tabs__dropdown { width: 93%; margin-top: 20px; margin-bottom: 20px; }
   .eaton-product-tabs__page-utility { padding: 0 15px; }
   .eaton-product-tabs .eaton-product-tabs__buttons__center { border-top: 2px solid #EEF0F2; }
-  .eaton-product-tabs--fixed .eaton-product-tabs__buttons { top: 0; left: 0; right: 0; margin: 0; }
+  .eaton-product-tabs--fixed .eaton-product-tabs__buttons { position: relative; z-index: unset; }
+  .eaton-product-tabs--fixed .eaton-product-tabs__buttons::before { height: 78px; }
+  .eaton-product-tabs--fixed .eaton-product-tabs__buttons__center { position: fixed; top: 0; left: 0; right: 0; margin: 0; z-index: 99; padding: 0; }
   .eaton-product-tabs--fixed .eaton-product-tabs__description { display: none; }
-  .eaton-product-tabs--fixed .eaton-product-tabs__page-utility { margin-top: 274px; }
+  .eaton-product-tabs--fixed .eaton-product-tabs__dropdown-container { margin-top: 157px; z-index: 1; padding: 0; }
   .eaton-product-tabs--fixed .eaton-product-tabs__tab-panel { padding-top: 265px; } }
 
 @media screen and (min-width: 992px) { .eaton-product-tabs__dropdown { font-size: 18px; font-size: 1.8rem; font-family: Arial, "Arial", sans-serif; font-weight: bold; }
