fixing linter errors

--- a/eaton.frontend/src/components/search-box/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-default.scss
@@ -47,7 +47,7 @@
       }
       // stylelint-enable
 
-      & ~ .eaton-search--default__form-mobile-label {
+      ~ .eaton-search--default__form-mobile-label {
         display: none;
       }
     }
