EATON-390: bug fix in mobile

--- a/eaton.frontend/src/components/search-box/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-default.scss
@@ -60,7 +60,9 @@
     color: $color__white;
     pointer-events: none;
     line-height: normal;
-    padding-top: 10px;
+    padding-top: 8px;
+    left: 0;
+    top: 0;
   }
 
   &__form-external {
