--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
@@ -74,11 +74,11 @@
               data-thumbnail-item="${isVideo == true ? 'image' : 'video'}">
 
               <!--*/ Thumbnail Item - Image */-->
-              <a href="#" class="module-media-gallery__thumbnail-aspect-ratio embed-responsive embed-responsive-16by9">
+              <button class="module-media-gallery__thumbnail-aspect-ratio embed-responsive embed-responsive-16by9">
                 <div class="module-media-gallery__thumbnail-image-wrapper embed-responsive-item">
                   <img src="${item.images.thumbnail}" alt="${item.images.altText}" />
                 </div>
-              </a>
+              </button>
             </li>
           </ul>
 
