Remove Font Family Overrides in TTIL / List components

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -1,4 +1,4 @@
-.eaton-list-component { font-family: "Eaton", Arial, sans-serif; margin-bottom: 60px; }
+.eaton-list-component { margin-bottom: 60px; }
 
 .eaton-list-component a { text-decoration: none; }
 
