--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -29,11 +29,13 @@
     margin: 60px 0 30px;
 
     &.enabled {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       padding: 0;
-      z-index: 501;
+      z-index: 300;
+      overflow: auto;
+      height: 100%;
     }
 
     .b-button {
@@ -54,7 +56,7 @@
     font-size: 18px;
     left: 0;
     color: $color__white;
-    background-color: #666;
+    background-color: $color__primary-gray1;
     width: 100%;
     padding: 15px 30px 0 30px;
     z-index: 510;
@@ -141,13 +143,17 @@
     margin-bottom: 12px;
   }
 
-
+ 
 
 
   //-----------------------------------
   // MediaQuery: Mobile & Tablet Only
   //-----------------------------------
   @include media-mobile-and-tablet {
+
+
+
+    padding: 60px 30px;
 
   }
 
@@ -160,4 +166,11 @@
 
   }
 
+}
+
+
+.facets-open {
+  position: fixed;
+  width: 100%;
+  overflow: hidden;
 }
