--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
@@ -75,7 +75,7 @@
 
 .faceted-navigation__mobile-container { z-index: 40; background-color: #FFF; margin: 60px 0 30px; }
 
-.faceted-navigation__mobile-container.enabled { position: absolute; top: 0; left: 0; padding: 0; z-index: 501; }
+.faceted-navigation__mobile-container.enabled { position: fixed; top: 0; left: 0; padding: 0; z-index: 300; overflow: auto; height: 100%; }
 
 .faceted-navigation__mobile-container .b-button { width: 100%; text-align: center; max-width: initial; }
 
@@ -83,7 +83,7 @@
 
 .faceted-navigation .visibile { display: block; }
 
-.faceted-navigation .mobile-header { position: fixed; top: 0; height: 53px; font-size: 18px; left: 0; color: #FFF; background-color: #666; width: 100%; padding: 15px 30px 0 30px; z-index: 510; }
+.faceted-navigation .mobile-header { position: fixed; top: 0; height: 53px; font-size: 18px; left: 0; color: #FFF; background-color: #333F48; width: 100%; padding: 15px 30px 0 30px; z-index: 510; }
 
 .faceted-navigation .mobile-header .close-facets-mobile { position: absolute; display: block; right: 20px; top: 50%; width: 48px; height: 48px; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
 
@@ -108,3 +108,7 @@
 .faceted-navigation label, .faceted-navigation__view-more-values { font-size: 14px; font-weight: normal; color: #005EB8; padding-left: 4px; }
 
 .faceted-navigation h4 { font-size: 26px; font-weight: bold; margin-bottom: 12px; }
+
+@media screen and (max-width: 991px) { .faceted-navigation { padding: 60px 30px; } }
+
+.facets-open { position: fixed; width: 100%; overflow: hidden; }
