--- a/eaton.frontend/src/components/tabbed-menu-list/css/tabbed-menu-list.scss
+++ b/eaton.frontend/src/components/tabbed-menu-list/css/tabbed-menu-list.scss
@@ -48,10 +48,11 @@
     }
 
     > a {
-      color: $color__black;
+      color: $color__primary-gray1;
 
       span {
         color: $color__primary-blue;
+        font-size: 20px;
       }
 
       &.collapsed {
