--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
@@ -21,10 +21,7 @@
                 <!--*/ Slide Item - Image */-->
                 <div class="module-media-gallery__slide-preview embed-responsive embed-responsive-16by9">
                   <div class="module-media-gallery__image-wrapper embed-responsive-item">
-                    <img data-src="${ item.images.preview }"
-                        data-desktop-rendition="${ item.images.preview }"
-                        data-mobile-rendition="${ item.images.preview }"
-                        alt="${item.images.altText}"
+                    <img alt="${item.images.altText}"
                         data-lazy="${ item.images.preview }" />
                   </div>
 
