--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-category-hero.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-category-hero.scss
@@ -20,6 +20,7 @@
     border: 0;
     font-size: 1.2em;
     color: $color__white;
+    font-family: $font-family__secondary;
   }
 
   &-eye-brown {
