--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-features/views/view-product-features.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-features/views/view-product-features.html
@@ -3,11 +3,11 @@
         <div class="col-xs-12 ${data.imgSrc.length > 0 ? 'col-sm-7' : 'col-sm-12'} feature-block-component__copy" style="background-color: ${data.backgroundColor @ context='styleString'}">
             <div class="feature-block-component__text">
                 <h2>${data.title}</h2>
-                <div class="feature-block-component__description">${data.text @ context = 'html'}</div>
+                <div class="feature-block-component__description b-body-copy">${data.text @ context = 'html'}</div>
             </div>
         </div>
-        <div data-sly-test="${data.imgSrc.length > 0}" class="col-xs-12 col-sm-5 feature-block-component__image feature-block-component__image--center">
-            <img class="img-responsive" data-src="${data.imgSrc}" data-desktop-rendition="${data.imgSrc}" data-mobile-rendition="${data.imgMobile}" data-tablet-rendition="${data.imgTablet}" alt="${data.imgAlt}" alt="${data.imgAlt}">
+        <div data-sly-test="${data.imgSrc.length > 0}" class="col-xs-12 col-sm-5 feature-block-component__image"
+             style="background:url('${data.imgSrc @ context='styleString'}') center no-repeat; background-size: cover">
         </div>
     </div>
 </div>
