--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -164,6 +164,7 @@
   &__header-top {
     border-bottom: 2px solid $color__secondary-gray6;
     padding-bottom: 28px;
+    padding-top: 25px;
   }
 
   &__title {
