--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -30,22 +30,21 @@
 
 .header-primary-nav::after { content: ''; position: absolute; bottom: 0; width: 100%; height: 4px; background: #EEF0F2; }
 
-.header-primary-nav .row { display: -webkit-box; display: -ms-flexbox; display: flex; }
-
-.header-primary-nav__links { position: relative; z-index: 1; }
+.header-primary-nav .row { display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; }
 
 .header-primary-nav__links .icon { font-size: 20px; color: #005EB8; position: relative; }
 
 @media screen and (max-width: 991px) { .header-primary-nav .row { -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-  .header-primary-nav__links { -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; }
-  .header-primary-nav__open-search, .header-primary-nav__toggle-mobile-menu { display: inline-block; padding: 17px; }
+  .header-primary-nav__links { position: absolute; right: 0; bottom: -6px; }
+  .header-primary-nav__open-search, .header-primary-nav__toggle-mobile-menu { display: inline-block; padding: 17px; position: relative; z-index: 1; }
   .header-primary-nav .icon-close { display: none; color: #FFF; } }
 
 @media screen and (min-width: 992px) { .header-primary-nav__menu { -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; position: relative; }
   .header-primary-nav__menu::after { content: ''; height: 30px; width: 1px; background: #98A4AE; position: absolute; top: 36px; right: 0; }
   .eaton-header--fixed .header-primary-nav__menu::after { top: 26px; right: 7px; }
+  .header-primary-nav__links { position: relative; z-index: 1; }
   .header-primary-nav__links i { top: -5px; }
-  .header-primary-nav__open-search { display: -webkit-box; display: -ms-flexbox; display: flex; height: 90px; padding: 30px; margin-top: 10px; }
+  .header-primary-nav__open-search { display: -webkit-box; display: -ms-flexbox; display: flex; height: 90px; padding: 30px; top: 10px; position: relative; }
   .header-primary-nav__open-search .icon-close { display: none; }
   .eaton-header--fixed .header-primary-nav__open-search { height: 70px; padding: 20px; }
   .search-open .header-primary-nav__open-search { -webkit-transition: background 0.3s ease-in-out; transition: background 0.3s ease-in-out; background: #333F48; }
@@ -57,16 +56,16 @@
 
 .search-open .header-search { -webkit-transform: translateY(0); transform: translateY(0); visibility: visible; }
 
-@media screen and (max-width: 991px) { .header-search { position: fixed; top: 56px; bottom: 0; width: 100%; } }
+@media screen and (max-width: 991px) { .header-search { position: fixed; top: 52px; bottom: 0; width: 100%; } }
 
 @media screen and (min-width: 992px) { .header-search { position: absolute; -webkit-box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.45); box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.45); } }
 
 .eaton-header { position: relative; z-index: 200; }
 
-@media screen and (max-width: 991px) { .eaton-header .eaton-logo { margin: 10px 15px; }
+@media screen and (max-width: 991px) { .eaton-header .eaton-logo { padding: 10px 15px; }
   .eaton-header .eaton-logo__link { width: 100px; height: 32px; } }
 
-@media screen and (min-width: 992px) { .eaton-header .eaton-logo { margin: 20px 15px 16px; }
+@media screen and (min-width: 992px) { .eaton-header .eaton-logo { padding: 20px 15px 16px; }
   .eaton-header--fixed { position: fixed; width: 100%; z-index: 250; top: 0; }
   .eaton-header--fixed .full-page-drawer, .eaton-header--fixed .header-utility-nav { display: none; }
   .eaton-header--fixed .eaton-logo__link { width: 126px; height: 40px; } }
