--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
@@ -52,7 +52,7 @@
 
 .faceted-navigation-header__header-bottom { margin-top: 30px; }
 
-.faceted-navigation-header__header-top { border-bottom: 2px solid #F8F8F8; padding-bottom: 28px; }
+.faceted-navigation-header__header-top { border-bottom: 2px solid #F8F8F8; padding-bottom: 28px; padding-top: 25px; }
 
 .faceted-navigation-header__title { font-size: 20px; font-weight: bold; }
 
