--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-support/views/view-product-support.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-support/views/view-product-support.html
@@ -1,6 +1,6 @@
-<div class="product-support-component" data-sly-use.data="${'../data/view-product-support-data.js' @testdata=properties.testdata}">
+<div class="product-support-component container" data-sly-use.data="${'../data/view-product-support-data.js' @testdata=properties.testdata}">
     <div class="row">
-        <div class="product-support-component--left col-xs-12 col-sm-10 col-sm-offset-2 col-lg-4 col-lg-offset-2">
+        <div class="product-support-component--left col-xs-12 col-sm-10 col-sm-offset-2 col-lg-5 col-lg-offset-1">
             <i class="product-support-component__icon icon icon-help"></i>
             <div class="product-support-component__text">
                 <h3>${data.title}</h3>
