--- a/eaton.frontend/src/components/footer/css/footer.scss
+++ b/eaton.frontend/src/components/footer/css/footer.scss
@@ -29,6 +29,11 @@
 
   .eaton-footer-top__link-list {
     margin-bottom: 40px;
+
+    a {
+      font-size: 13px;
+      line-height: 17px;
+    }
   }
 
 }
@@ -90,5 +95,15 @@
   .eaton-footer-bottom__link-list { float: left; }
 
   .eaton-footer-bottom__copyright { float: right; }
+
+  .eaton-footer-top {
+    .eaton-footer-top__link-list {
+      a {
+        font-size: 18px;
+        line-height: 26px;
+      }
+
+    }
+  }
 
 }
