--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
@@ -10,6 +10,8 @@
 
 .eaton-footer-top .eaton-footer-top__link-list { margin-bottom: 40px; }
 
+.eaton-footer-top .eaton-footer-top__link-list a { font-size: 13px; line-height: 17px; }
+
 .eaton-footer-bottom { background: #333F48; }
 
 .dark-theme .eaton-footer-bottom { color: #FFF; }
@@ -25,4 +27,5 @@
 @media screen and (min-width: 992px) { .eaton-footer-top__logo { margin-bottom: 30px; }
   .eaton-footer-bottom { padding: 40px 0; }
   .eaton-footer-bottom__link-list { float: left; }
-  .eaton-footer-bottom__copyright { float: right; } }
+  .eaton-footer-bottom__copyright { float: right; }
+  .eaton-footer-top .eaton-footer-top__link-list a { font-size: 18px; line-height: 26px; } }
