fix issue with carousel arrows

--- a/eaton.frontend/src/components/upsell-products/css/upsell-products.scss
+++ b/eaton.frontend/src/components/upsell-products/css/upsell-products.scss
@@ -16,7 +16,28 @@
     }
   }
 
-  .module-related-products__arrows {
+  &__arrows {
+    position: absolute;
     top: 30%;
+    color: $color__secondary-gray4;
+    display: none !important;
+
+    .icon {
+      font-size: 37px;
+    }
+  }
+
+  &__prev-arrow {
+    left: 42px;
+  }
+
+  &__next-arrow {
+    right: 42px;
+  }
+
+  @include media-desktop-large {
+    &:hover .upsell-products__arrows {
+      display: block !important;
+    }
   }
 }
