--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-upsell-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-upsell-products.html
@@ -23,11 +23,11 @@
             </ul>
 
             <sly data-sly-test="${data.length > 3}">
-                <button class="module-related-products__prev-arrow module-related-products__arrows button--reset">
+                <button class="upsell-products__prev-arrow upsell-products__arrows button--reset">
                     <span class="icon icon-chevron-left"></span>
                     <span class="sr-only">Go to Previous Item</span>
                 </button>
-                <button class="module-related-products__next-arrow module-related-products__arrows button--reset">
+                <button class="upsell-products__next-arrow upsell-products__arrows button--reset">
                     <span class="icon icon-chevron-right"></span>
                     <span class="sr-only">Go to Next Item</span>
                 </button>
