--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
@@ -60,10 +60,10 @@
 
 .faceted-navigation-header__filter-link .icon { font-size: 10px; margin-right: 2px; margin-top: 5px; }
 
-@media screen and (max-width: 991px) { .faceted-navigation-header__header-bottom { margin-top: 60px; }
+@media screen and (max-width: 991px) { .faceted-navigation-header__header-bottom { margin-top: 20px; }
   .faceted-navigation-header__filter-link { font-size: 12px; } }
 
-.faceted-navigation__mobile-container .faceted-navigation { padding: 0 30px; }
+.faceted-navigation__mobile-container .faceted-navigation { padding: 60px 30px; }
 
 .autocorrected-search { margin-top: 20px; font-size: 20px; }
 
@@ -73,7 +73,7 @@
 
 .faceted-navigation__list-item { padding-left: 4px; }
 
-.faceted-navigation__mobile-container { z-index: 40; background-color: #FFF; margin: 60px 0 30px; }
+.faceted-navigation__mobile-container { z-index: 40; background-color: #FFF; margin: 0; }
 
 .faceted-navigation__mobile-container.enabled { position: fixed; top: 0; left: 0; padding: 0; z-index: 300; overflow: auto; height: 100%; }
 
@@ -111,4 +111,4 @@
 
 @media screen and (max-width: 991px) { .faceted-navigation { padding: 60px 30px; } }
 
-.facets-open { position: fixed; width: 100%; overflow: hidden; }
+@media screen and (max-width: 991px) { body.facets-open { position: fixed; width: 100%; overflow: hidden; } }
