--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-upsell-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-upsell-products.html
@@ -5,23 +5,24 @@
             <p>${'Discover other Eaton products and accesories built to enhance this product.' @ i18N}</p>
         </div>
         <div class="module-related-products">
-            <ul class="upsell-products__slides" data-sly-list="${data}">
-                <li class="slides col-xs-12 ${data.length < 3 ? 'col-sm-4' : 'col-sm-3'}">
-                    <a href="${item.link}" target="${item.target}" class="u-absolute-fill">
+            <div class="upsell-products">
+                <ul class="upsell-products__slides" data-sly-list="${data}">
+                    <li class="slides col-xs-12 ${data.length < 3 ? 'col-sm-4' : 'col-sm-3'}">
+                        <a href="${item.link}" target="${item.target}" class="u-absolute-fill">
                 <span class="sr-only">
                     ${item.title}
                 </span>
-                    </a>
-                    <div class="col-xs-12 related-products-component__card">
-                        <img class="carousel-component-slide__image" data-src="${item.image}" data-desktop-rendition="${item.image}" data-mobile-rendition="${item.mobile_image}" data-tablet-rendition="${item.tablet_image}" alt="${item.image_alt}"/>
-                    </div>
-                    <div class="col-xs-12">
-                        <p class="b-eyebrow-small related-products-component__title">${item.title}</p>
-                        <p class="b-h4-link">${item.text}</p>
-                    </div>
-                </li>
-            </ul>
-
+                        </a>
+                        <div class="col-xs-12 related-products-component__card">
+                            <img class="carousel-component-slide__image" data-src="${item.image}" data-desktop-rendition="${item.image}" data-mobile-rendition="${item.mobile_image}" data-tablet-rendition="${item.tablet_image}" alt="${item.image_alt}"/>
+                        </div>
+                        <div class="col-xs-12">
+                            <p class="b-eyebrow-small related-products-component__title">${item.title}</p>
+                            <p class="b-h4-link">${item.text}</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
             <sly data-sly-test="${data.length > 3}">
                 <button class="upsell-products__prev-arrow upsell-products__arrows button--reset">
                     <span class="icon icon-chevron-left"></span>
