EATON-396 - Done button fix

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
@@ -91,5 +91,9 @@
 
     </sly>
 
+
+    <button class="b-button b-button__tertiary b-button__tertiary--light done-facets-mobile u-visible-mobile">Done</button>
+
+
   </div>
 </template>
