--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -151,9 +151,39 @@
   //-----------------------------------
   @include media-mobile-and-tablet {
 
-
-
     padding: 60px 30px;
+
+
+
+    .faceted-navigation__facet-value {
+      padding-bottom: 0 !important;
+    }
+
+
+    .faceted-navigation__view-more-values {
+      padding-top: 8px;
+    }
+
+
+
+
+    .faceted-navigation__header {
+      margin: 9px 0;
+    }
+
+
+    .faceted-navigation__mobile-container {
+        margin: 30px 0 30px;
+    }
+
+
+    .done-facets-mobile {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+    }
+
 
   }
 
@@ -174,3 +204,11 @@
   width: 100%;
   overflow: hidden;
 }
+
+
+
+  @include media-mobile-and-tablet {
+       .faceted-navigation__mobile-container .faceted-navigation {
+        margin-bottom: 140px;
+    }
+  }
