change font family to category hero

--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-category-hero.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-category-hero.scss
@@ -39,6 +39,7 @@
     color: $color__white;
     font-size: 1.2em;
     margin-top: 30px;
+    font-family: $font-family__secondary;
   }
 
   &__header-title h2 {
