[EATON-405] Related Products and Cross Sell-Padding Missing above component.

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-default.html
@@ -1,6 +1,6 @@
 <sly data-sly-use.data="${'../data/title-data.js' @testdata=properties.testdata}">
 
-  <div class="eaton-title eaton-title--default">
+  <div class="eaton-title eaton-title--default ${properties.toggleInnerGrid == 'true' ? 'eaton-title--inset' : ''}">
 
     <!--/* If Grid Enabled */-->
     <div data-sly-test="${ properties.toggleInnerGrid }" class="container">
