--- a/eaton.frontend/src/components/title/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/title/css/views/_view-default.scss
@@ -20,6 +20,10 @@
     font-style: italic;
   }
 
+  // When the inner-grid is active for the component, add padding for the headline
+  &--inset &__headline{
+    padding-top: $spacing__sm;
+  }
 
   //-----------------------------------
   // Media-Query: Desktop & Desktop Large
