--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title/css/title.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title/css/title.css
@@ -4,6 +4,8 @@
 
 .eaton-title__byline { color: #98A4AE; font-family: Arial, "Arial", sans-serif; font-size: 15px; font-style: italic; }
 
+.eaton-title--inset .eaton-title__headline { padding-top: 30px; }
+
 @media screen and (min-width: 992px) { .eaton-title__byline { font-size: 20px; } }
 
 .eaton-title--eyebrow-and-byline { margin-top: 90px; margin-bottom: 30px; }
