--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
@@ -116,6 +116,8 @@
   .faceted-navigation .faceted-navigation__mobile-container { margin: 30px 0 30px; }
   .faceted-navigation .done-facets-mobile { position: fixed; bottom: 0; left: 0; width: 100%; } }
 
+@media screen and (min-width: 992px) { .faceted-navigation .done-facets-mobile { display: none; } }
+
 @media screen and (max-width: 991px) { body.facets-open { position: fixed; width: 100%; overflow: hidden; } }
 
 @media screen and (max-width: 991px) { .faceted-navigation__mobile-container .faceted-navigation { margin-bottom: 30px; } }
