--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/tabbed-menu-list/css/tabbed-menu-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/tabbed-menu-list/css/tabbed-menu-list.css
@@ -27,7 +27,7 @@
   .eaton-tabbed-menu-list__item > a { color: #005EB8; }
   .eaton-tabbed-menu-list__item > a.active { color: #000; }
   .eaton-tabbed-menu-list__item > a.active.desktop.link { color: #005EB8; }
-  .eaton-tabbed-menu-list__item a { padding-bottom: 50px; }
+  .eaton-tabbed-menu-list__item a { padding-bottom: 50px; color: #005EB8; }
   .eaton-tabbed-menu-list__tab-links { border-left: 1px solid #98A4AE; }
   .eaton-tabbed-menu-list__tabs { display: block; overflow: hidden; }
   .eaton-tabbed-menu-list__item { border-bottom: 0; }
