Featured Block - Remove background Cover, + move CSS properties to SASS File - remove inline properties

--- a/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
+++ b/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
@@ -71,6 +71,9 @@
 
   &__image {
     height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+
 
     &--center {
       display: flex;
@@ -115,4 +118,3 @@
     }
   }
 }
-
