[Feature-Block] Update Background Themes to cover the entire component, (not only the text column)

--- a/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
+++ b/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
@@ -2,6 +2,8 @@
 
   padding: 60px 0;
 
+  &--theme-blue &__container { background-color: $color__primary-blue; }
+
   &__container {
 
     &--height {
