--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-feature-block.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-feature-block.html
@@ -1,5 +1,5 @@
 <template data-sly-template.module="${ @ data}">
-    <div class="feature-block-component">
+    <div class="feature-block-component ${data.backgroundColor == '#005EB8' ? 'feature-block-component--theme-blue' : 'feature-block-component--theme-white'}">
         <div class="row feature-block-component__container feature-block-component__container--height">
             <div style="background-color: ${data.backgroundColor @ context='styleString'}"
                  class="col-xs-12 ${data.imgSrc.length > 0 ? 'col-sm-7' : 'col-sm-12'} feature-block-component__copy feature-block-component__copy--${data.imgAlignment} ${data.backgroundColor == '#005EB8' ? 'feature-block-component__copy--white-text' : ''}">
