--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
@@ -33,6 +33,8 @@
 
 .feature-block-component { padding: 60px 0; }
 
+.feature-block-component--theme-blue .feature-block-component__container { background-color: #005EB8; }
+
 .feature-block-component__container--height { height: 665px; display: -webkit-box; display: -ms-flexbox; display: flex; }
 
 @media screen and (max-width: 767px) { .feature-block-component__container--height .feature-block-component__copy { padding-left: 30px; padding-right: 30px; } }
