fix styling issues to category highlight

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
@@ -11,8 +11,8 @@
                         <img src="${data.single_feature_card.image}" class="hidden-xs img-responsive category__image" alt="${data.single_feature_card.image_alt}"/>
                         <img src="${data.single_feature_card.mobile_image}" class="visible-xs img-responsive category__image" alt="${data.single_feature_card.image_alt}"/> 
                         <div class="featured-category--topbottompadding">
-                            <div class="category__title--font category__title--bottompadding">${data.single_feature_card.title}</div>
-                            <div class="category__link--font">${data.single_feature_card.text}</div>
+                            <div class="b-eyebrow-large category__title--bottompadding">${data.single_feature_card.title}</div>
+                            <div class="featured-category__title">${data.single_feature_card.text}</div>
                             <div class="category-item-date"><em>${data.single_feature_card.date_text}</em></div>
                         </div>                    
                     </a>
@@ -29,8 +29,8 @@
                             <img src="${slider.image}" class="img-responsive category__image" alt="${slider.image_alt}"/>
                         </div>
                         <div class="category__item--border category__item-innerpadding related-category--tablet-right category__item">
-                            <div class="related-category__title--font category__title--bottompadding">${slider.title}</div>
-                            <div class="category__link--font">${slider.text}</div>
+                            <div class="b-eyebrow-small category__title--bottompadding">${slider.title}</div>
+                            <div class="b-h5-link">${slider.text}</div>
                             <p class="category-item-date"><em>${slider.date_text}</em></p>
                         </div>
                     </a>
@@ -47,8 +47,8 @@
                             <div>
                                 <img src="${slider.mobile_image}" class="img-responsive category__image" alt="${slider.image_alt}"/>
                                 <div class="category__item--border category__item-innerpadding carousel__item">
-                                    <div class="related-category__title--font category__title--bottompadding">${slider.title}</div>
-                                    <h5 class="category__link--font">${slider.text}</h5>
+                                    <div class="b-eyebrow-small category__title--bottompadding">${slider.title}</div>
+                                    <h5 class="b-h5-link">${slider.text}</h5>
                                     <p class="category-item-date"><em>${slider.date_text}</em></p>
                                 </div>
                             </div>
