--- a/eaton.frontend/src/components/list/css/views/_view-featured-article.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-featured-article.scss
@@ -16,6 +16,14 @@
       color: $color__white;
     }
   }
+
+  &__title {
+    font-family: $font-family__secondary;
+    color: $color__primary-blue;
+    font-size: 2.875rem;
+    font-weight: bold;
+    line-height: 50px;
+  }
 }
 
 @media only screen and (max-width: 767px) {
