--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-tile-links.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-tile-links.html
@@ -1,6 +1,6 @@
 <sly data-sly-use.data="${'../data/view-tile-links-data.js' @testdata=properties.testdata}">
     <div class="tile-link-component container">
-        <div class="container">
+        <div class="tile-link-component__container">
             <div class="row" data-sly-list.tile="${data.element}">
                 <a class="col-xs-12 col-md-3 tile-link-component__element tile-link-component__element--${tileList.index}" data-sly-test="${!tile.image && !tile.icon}" href="${tile.link}">
                     <h2 class="tile-link-component__title">${tile.title} <span class="tile-link-component__arrow glyphicon glyphicon-menu-right arrow"></span></h2>
