--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -70,6 +70,8 @@
 
 @media screen and (min-width: 768px) and (max-width: 991px) { .featured-story-component__text { padding-top: 15px; font-size: 1.6em; } }
 
+@media screen and (min-width: 768px) { .tile-link-component__container { padding: 0 15px; } }
+
 .tile-link-component__copy { padding: 60px 0; }
 
 .tile-link-component__element { color: #FFF; margin-left: 30px; margin-bottom: 60px; height: 240px; position: relative; padding: 0; }
@@ -88,11 +90,11 @@
 
 .tile-link-component__element--5 { background-color: #333F48; }
 
-.tile-link-component__icon { position: absolute; bottom: 70px; color: #FFF; width: 20%; left: 15px; }
+.tile-link-component__icon { position: absolute; bottom: 80px; color: #FFF; width: 20%; left: 20px; }
 
 .tile-link-component__image { width: 100%; }
 
-.tile-link-component__title { position: absolute; bottom: 0; width: 100%; margin: 0; padding: 10px 15px; font-size: 2.25em; }
+.tile-link-component__title { position: absolute; bottom: 0; width: 100%; margin: 0; padding: 20px; font-size: 2.25em; }
 
 .tile-link-component__title--background { background-color: #333F48; opacity: 0.7; }
 
