--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-tile-links.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-tile-links.scss
@@ -73,7 +73,12 @@
     width: 100%;
     margin: 0;
     padding: 20px;
-    font-size: 2.25em;
+    font-size: 1.875em;
+
+
+    @include media-tablet-and-up {
+      font-size: 2em;
+    }
 
     &--background {
       background-color: $color__primary-gray1;
