--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -94,7 +94,9 @@
 
 .tile-link-component__image { width: 100%; }
 
-.tile-link-component__title { position: absolute; bottom: 0; width: 100%; margin: 0; padding: 20px; font-size: 2.25em; }
+.tile-link-component__title { position: absolute; bottom: 0; width: 100%; margin: 0; padding: 20px; font-size: 1.875em; }
+
+@media screen and (min-width: 768px) { .tile-link-component__title { font-size: 2em; } }
 
 .tile-link-component__title--background { background-color: #333F48; opacity: 0.7; }
 
