--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-upsell-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-upsell-products.html
@@ -8,9 +8,7 @@
             <ul class="upsell-products__slides" data-sly-list="${data}">
                 <li class="slides col-xs-12 ${data.length < 3 ? 'col-sm-4' : 'col-sm-3'}">
                     <a href="${item.link}" target="${item.target}" class="u-absolute-fill">
-            <span class="sr-only">
-                ${item.title}
-            </span>
+                      <span class="sr-only">${item.title}</span>
                     </a>
                     <div class="col-xs-12 related-products-component__card">
                         <img class="carousel-component-slide__image" data-src="${item.image}" data-desktop-rendition="${item.image}" data-mobile-rendition="${item.mobile_image}" data-tablet-rendition="${item.tablet_image}" alt="${item.image_alt}"/>
@@ -23,15 +21,14 @@
             </ul>
             <sly data-sly-test="${data.length > 3}">
                 <button class="upsell-products__prev-arrow upsell-products__arrows button--reset">
-                    <span class="icon icon-chevron-left"></span>
+                    <i class="icon icon-chevron-left"></i>
                     <span class="sr-only">Go to Previous Item</span>
                 </button>
                 <button class="upsell-products__next-arrow upsell-products__arrows button--reset">
-                    <span class="icon icon-chevron-right"></span>
+                    <i class="icon icon-chevron-right"></i>
                     <span class="sr-only">Go to Next Item</span>
                 </button>
             </sly>
-
         </div>
     </div>
 </template>
