--- a/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
+++ b/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
@@ -43,7 +43,7 @@
     position: absolute;
     top: 25%;
     color: $color__secondary-gray4;
-    display: none !important;
+    display: none !important; // stylelint-disable-line declaration-no-important
 
     .icon {
       font-size: 37px;
@@ -64,7 +64,7 @@
 
   @include media-desktop-large {
     &:hover .module-related-products__arrows {
-      display: block !important;
+      display: block !important; // stylelint-disable-line declaration-no-important
     }
   }
 }
