--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/breadcrumb/css/breadcrumb.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/breadcrumb/css/breadcrumb.css
@@ -4,6 +4,10 @@
 
 .eaton-breadcrumb__list { list-style-type: none; margin: 0; padding: 0; display: block; }
 
+.eaton-breadcrumb__list::before, .eaton-breadcrumb__list::after { content: " "; display: table; }
+
+.eaton-breadcrumb__list::after { clear: both; }
+
 .eaton-breadcrumb__list-item { -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-size: 14px; margin-right: 5px; float: left; }
 
 .eaton-breadcrumb__list-item .icon { font-size: 10px; padding: 0 4px; }
